--- a/integ-gatein/pom.xml
+++ b/integ-gatein/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>integ</artifactId>
     <groupId>org.exoplatform.integration</groupId>
-    <version>4.1.1</version>
+    <version>4.1.x-SNAPSHOT</version>
   </parent>
   <artifactId>integ-gatein</artifactId>
   <packaging>pom</packaging>
