--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
     <!-- Project Dependencies                     -->
     <!-- **************************************** -->
 
-    <org.exoplatform.depmgt.version>11-SNAPSHOT</org.exoplatform.depmgt.version>
+    <org.exoplatform.depmgt.version>11-M3</org.exoplatform.depmgt.version>
     <!-- JCR Project Dependencies -->
 
       <org.exoplatform.kernel.version>2.5.1-GA</org.exoplatform.kernel.version>
@@ -49,16 +49,16 @@
       <org.exoplatform.jcr.version>1.16.1-GA</org.exoplatform.jcr.version>
     <!-- GateIn Project Dependencies -->
     <org.gatein.shindig.version>2.0.2.Final-gatein-4</org.gatein.shindig.version>
-    <org.gatein.portal.version>4.3.x-PLF-SNAPSHOT</org.gatein.portal.version>
+    <org.gatein.portal.version>4.3.0-M3-PLF</org.gatein.portal.version>
     <!-- Platform Project Dependencies -->
-    <org.exoplatform.commons.version>4.3.x-SNAPSHOT</org.exoplatform.commons.version>
-    <org.exoplatform.ecms.version>4.3.x-SNAPSHOT</org.exoplatform.ecms.version>
-    <org.exoplatform.social.version>4.3.x-SNAPSHOT</org.exoplatform.social.version>
-    <org.exoplatform.forum.version>4.3.x-SNAPSHOT</org.exoplatform.forum.version>
-    <org.exoplatform.wiki.version>4.3.x-SNAPSHOT</org.exoplatform.wiki.version>
-    <org.exoplatform.calendar.version>4.3.x-SNAPSHOT</org.exoplatform.calendar.version>
+    <org.exoplatform.commons.version>4.3.0-M3</org.exoplatform.commons.version>
+    <org.exoplatform.ecms.version>4.3.0-M3</org.exoplatform.ecms.version>
+    <org.exoplatform.social.version>4.3.0-M3</org.exoplatform.social.version>
+    <org.exoplatform.forum.version>4.3.0-M3</org.exoplatform.forum.version>
+    <org.exoplatform.wiki.version>4.3.0-M3</org.exoplatform.wiki.version>
+    <org.exoplatform.calendar.version>4.3.0-M3</org.exoplatform.calendar.version>
     <!-- Platform Project 3rd party Dependencies -->
-    <org.exoplatform.doc.doc-style.version>4.3.x-SNAPSHOT</org.exoplatform.doc.doc-style.version>
+    <org.exoplatform.doc.doc-style.version>4.3.0-M3</org.exoplatform.doc.doc-style.version>
     <!-- For surefire and failsafe to be compatible with jacoco -->
     <argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
   </properties>
