--- a/integ-search-service/pom.xml
+++ b/integ-search-service/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>integ</artifactId>
     <groupId>org.exoplatform.integration</groupId>
-    <version>4.2.x-SNAPSHOT</version>
+    <version>4.2.1</version>
   </parent>
   <artifactId>integ-search-service</artifactId>
   <packaging>jar</packaging>
