--- a/pom.xml
+++ b/pom.xml
@@ -44,8 +44,8 @@
     <org.exoplatform.depmgt.version>12-SNAPSHOT</org.exoplatform.depmgt.version>
     <!-- JCR Project Dependencies -->
 
-      <org.exoplatform.kernel.version>2.5.4-GA</org.exoplatform.kernel.version>
-      <org.exoplatform.core.version>2.6.4-GA</org.exoplatform.core.version>
+      <org.exoplatform.kernel.version>2.6.x-SNAPSHOT</org.exoplatform.kernel.version>
+      <org.exoplatform.core.version>2.7.x-SNAPSHOT</org.exoplatform.core.version>
       <org.exoplatform.jcr.version>1.17.x-SNAPSHOT</org.exoplatform.jcr.version>
     <!-- GateIn Project Dependencies -->
     <org.gatein.shindig.version>2.0.2.Final-gatein-4</org.gatein.shindig.version>
