--- a/integ-forum/pom.xml
+++ b/integ-forum/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>integ</artifactId>
     <groupId>org.exoplatform.integration</groupId>
-    <version>4.3.x-SNAPSHOT</version>
+    <version>4.3.1-RC01</version>
   </parent>
   <artifactId>integ-forum</artifactId>
   <packaging>pom</packaging>
