--- a/integ-ecms/integ-ecms-social/pom.xml
+++ b/integ-ecms/integ-ecms-social/pom.xml
@@ -8,7 +8,7 @@
   </parent>
   <artifactId>integ-ecms-social</artifactId>
   <packaging>jar</packaging>
-  <name>eXo Social - View Activities</name>
+  <name>eXo PLF:: Social - View Activities</name>
   <description>ECMS with Social activity</description>
   <dependencies>
     <dependency>
