--- a/integ-forum/pom.xml
+++ b/integ-forum/pom.xml
@@ -8,7 +8,7 @@
   </parent>
   <artifactId>integ-forum</artifactId>
   <packaging>pom</packaging>
-  <name>eXo Integration - Forum</name>
+  <name>eXo PLF:: Integration - Forum</name>
   <modules>
     <module>integ-forum-social</module>
   </modules>
