--- a/integ-wiki/integ-wiki-social/pom.xml
+++ b/integ-wiki/integ-wiki-social/pom.xml
@@ -8,7 +8,7 @@
   </parent>
   <artifactId>integ-wiki-social</artifactId>
   <packaging>jar</packaging>
-  <name>eXo Social - Wiki Activities</name>
+  <name>eXo PLF:: Social - Wiki Activities</name>
   <description>Wiki with Social activity</description>
   <dependencies>
     <dependency>
