--- a/integ-social/integ-social-ecms/pom.xml
+++ b/integ-social/integ-social-ecms/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>integ-social</artifactId>
     <groupId>org.exoplatform.integration</groupId>
-    <version>4.4.x-SNAPSHOT</version>
+    <version>4.4.0-M17</version>
   </parent>
   <artifactId>integ-social-ecms</artifactId>
   <packaging>jar</packaging>
