--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
   <parent>
     <artifactId>maven-parent-pom</artifactId>
     <groupId>org.exoplatform</groupId>
-    <version>16-RC01</version>
+    <version>17-SNAPSHOT</version>
     <relativePath />
   </parent>
   <groupId>org.exoplatform.integration</groupId>
   <artifactId>integ</artifactId>
-  <version>4.4.x-SNAPSHOT</version>
+  <version>4.5.x-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>eXo PLF:: Integration</name>
   <modules>
@@ -41,22 +41,22 @@
     <!-- Project Dependencies                     -->
     <!-- **************************************** -->
 
-    <org.exoplatform.depmgt.version>12-SNAPSHOT</org.exoplatform.depmgt.version>
+    <org.exoplatform.depmgt.version>13-SNAPSHOT</org.exoplatform.depmgt.version>
     <!-- JCR Project Dependencies -->
 
-      <org.exoplatform.kernel.version>2.6.x-SNAPSHOT</org.exoplatform.kernel.version>
-      <org.exoplatform.core.version>2.7.x-SNAPSHOT</org.exoplatform.core.version>
-      <org.exoplatform.jcr.version>1.17.x-SNAPSHOT</org.exoplatform.jcr.version>
+      <org.exoplatform.kernel.version>2.7.x-SNAPSHOT</org.exoplatform.kernel.version>
+      <org.exoplatform.core.version>2.8.x-SNAPSHOT</org.exoplatform.core.version>
+      <org.exoplatform.jcr.version>1.18.x-SNAPSHOT</org.exoplatform.jcr.version>
     <!-- GateIn Project Dependencies -->
     <org.gatein.shindig.version>2.0.2.Final-gatein-4</org.gatein.shindig.version>
-    <org.gatein.portal.version>4.4.x-PLF-SNAPSHOT</org.gatein.portal.version>
+    <org.gatein.portal.version>4.5.x-PLF-SNAPSHOT</org.gatein.portal.version>
     <!-- Platform Project Dependencies -->
-    <org.exoplatform.commons.version>4.4.x-SNAPSHOT</org.exoplatform.commons.version>
-    <org.exoplatform.ecms.version>4.4.x-SNAPSHOT</org.exoplatform.ecms.version>
-    <org.exoplatform.social.version>4.4.x-SNAPSHOT</org.exoplatform.social.version>
-    <org.exoplatform.forum.version>4.4.x-SNAPSHOT</org.exoplatform.forum.version>
-    <org.exoplatform.wiki.version>4.4.x-SNAPSHOT</org.exoplatform.wiki.version>
-    <org.exoplatform.calendar.version>4.4.x-SNAPSHOT</org.exoplatform.calendar.version>
+    <org.exoplatform.commons.version>4.5.x-SNAPSHOT</org.exoplatform.commons.version>
+    <org.exoplatform.ecms.version>4.5.x-SNAPSHOT</org.exoplatform.ecms.version>
+    <org.exoplatform.social.version>4.5.x-SNAPSHOT</org.exoplatform.social.version>
+    <org.exoplatform.forum.version>4.5.x-SNAPSHOT</org.exoplatform.forum.version>
+    <org.exoplatform.wiki.version>4.5.x-SNAPSHOT</org.exoplatform.wiki.version>
+    <org.exoplatform.calendar.version>4.5.x-SNAPSHOT</org.exoplatform.calendar.version>
     <!-- Platform Project 3rd party Dependencies -->
     <org.exoplatform.doc.doc-style.version>4.4.x-SNAPSHOT</org.exoplatform.doc.doc-style.version>
     <!-- For surefire and failsafe to be compatible with jacoco -->
