--- a/integ-social/pom.xml
+++ b/integ-social/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>integ</artifactId>
     <groupId>org.exoplatform.integration</groupId>
-    <version>4.4.x-SNAPSHOT</version>
+    <version>4.4.0-RC04</version>
   </parent>
   <artifactId>integ-social</artifactId>
   <packaging>pom</packaging>
