--- a/integ-search-portlet/pom.xml
+++ b/integ-search-portlet/pom.xml
@@ -51,6 +51,7 @@
     </dependency>
   </dependencies>
   <build>
+    <finalName>unified-search</finalName>
     <plugins>
     <!--
       <plugin>
