--- a/pom.xml
+++ b/pom.xml
@@ -41,24 +41,24 @@
     <!-- Project Dependencies                     -->
     <!-- **************************************** -->
 
-    <org.exoplatform.depmgt.version>12.x-SNAPSHOT</org.exoplatform.depmgt.version>
+    <org.exoplatform.depmgt.version>12</org.exoplatform.depmgt.version>
     <!-- JCR Project Dependencies -->
 
-      <org.exoplatform.kernel.version>2.6.x-SNAPSHOT</org.exoplatform.kernel.version>
-      <org.exoplatform.core.version>2.7.x-SNAPSHOT</org.exoplatform.core.version>
-      <org.exoplatform.jcr.version>1.17.x-SNAPSHOT</org.exoplatform.jcr.version>
+      <org.exoplatform.kernel.version>2.6.1-RC04</org.exoplatform.kernel.version>
+      <org.exoplatform.core.version>2.7.1-RC04</org.exoplatform.core.version>
+      <org.exoplatform.jcr.version>1.17.1-RC04</org.exoplatform.jcr.version>
     <!-- GateIn Project Dependencies -->
     <org.gatein.shindig.version>2.0.2.Final-gatein-4</org.gatein.shindig.version>
-    <org.gatein.portal.version>4.4.x-PLF-SNAPSHOT</org.gatein.portal.version>
+    <org.gatein.portal.version>4.4.1-RC04-PLF</org.gatein.portal.version>
     <!-- Platform Project Dependencies -->
-    <org.exoplatform.commons.version>4.4.x-SNAPSHOT</org.exoplatform.commons.version>
-    <org.exoplatform.ecms.version>4.4.x-SNAPSHOT</org.exoplatform.ecms.version>
-    <org.exoplatform.social.version>4.4.x-SNAPSHOT</org.exoplatform.social.version>
-    <org.exoplatform.forum.version>4.4.x-SNAPSHOT</org.exoplatform.forum.version>
-    <org.exoplatform.wiki.version>4.4.x-SNAPSHOT</org.exoplatform.wiki.version>
-    <org.exoplatform.calendar.version>4.4.x-SNAPSHOT</org.exoplatform.calendar.version>
+    <org.exoplatform.commons.version>4.4.1-RC04</org.exoplatform.commons.version>
+    <org.exoplatform.ecms.version>4.4.1-RC04</org.exoplatform.ecms.version>
+    <org.exoplatform.social.version>4.4.1-RC04</org.exoplatform.social.version>
+    <org.exoplatform.forum.version>4.4.1-RC04</org.exoplatform.forum.version>
+    <org.exoplatform.wiki.version>4.4.1-RC04</org.exoplatform.wiki.version>
+    <org.exoplatform.calendar.version>4.4.1-RC04</org.exoplatform.calendar.version>
     <!-- Platform Project 3rd party Dependencies -->
-    <org.exoplatform.doc.doc-style.version>4.4.x-SNAPSHOT</org.exoplatform.doc.doc-style.version>
+    <org.exoplatform.doc.doc-style.version>4.4.1-RC04</org.exoplatform.doc.doc-style.version>
     <!-- For surefire and failsafe to be compatible with jacoco -->
     <argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
   </properties>
