--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <groupId>org.exoplatform.integration</groupId>
   <artifactId>integ</artifactId>
-  <version>4.5.x-SNAPSHOT</version>
+  <version>5.0.x-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>eXo PLF:: Integration</name>
   <modules>
@@ -40,26 +40,22 @@
     <!-- **************************************** -->
     <!-- Project Dependencies                     -->
     <!-- **************************************** -->
-
     <org.exoplatform.depmgt.version>13-SNAPSHOT</org.exoplatform.depmgt.version>
-    <!-- JCR Project Dependencies -->
-
-      <org.exoplatform.kernel.version>2.7.x-SNAPSHOT</org.exoplatform.kernel.version>
-      <org.exoplatform.core.version>2.8.x-SNAPSHOT</org.exoplatform.core.version>
-      <org.exoplatform.jcr.version>1.18.x-SNAPSHOT</org.exoplatform.jcr.version>
+    <org.exoplatform.kernel.version>5.0.x-SNAPSHOT</org.exoplatform.kernel.version>
+    <org.exoplatform.core.version>5.0.x-SNAPSHOT</org.exoplatform.core.version>
+    <org.exoplatform.jcr.version>5.0.x-SNAPSHOT</org.exoplatform.jcr.version>
+    <org.exoplatform.gatein.portal.version>5.0.x-SNAPSHOT</org.exoplatform.gatein.portal.version>
+    <org.exoplatform.commons.version>5.0.x-SNAPSHOT</org.exoplatform.commons.version>
+    <org.exoplatform.ecms.version>5.0.x-SNAPSHOT</org.exoplatform.ecms.version>
+    <org.exoplatform.social.version>5.0.x-SNAPSHOT</org.exoplatform.social.version>
+    <org.exoplatform.forum.version>5.0.x-SNAPSHOT</org.exoplatform.forum.version>
+    <org.exoplatform.wiki.version>5.0.x-SNAPSHOT</org.exoplatform.wiki.version>
+    <org.exoplatform.calendar.version>5.0.x-SNAPSHOT</org.exoplatform.calendar.version>
+    <org.exoplatform.doc.doc-style.version>5.0.x-SNAPSHOT</org.exoplatform.doc.doc-style.version>
+    <!-- Platform Project 3rd party Dependencies -->
+    <org.powermock.version>1.6.5</org.powermock.version>
     <!-- GateIn Project Dependencies -->
     <org.gatein.shindig.version>2.0.2.Final-gatein-4</org.gatein.shindig.version>
-    <org.gatein.portal.version>4.5.x-PLF-SNAPSHOT</org.gatein.portal.version>
-    <!-- Platform Project Dependencies -->
-    <org.exoplatform.commons.version>4.5.x-SNAPSHOT</org.exoplatform.commons.version>
-    <org.exoplatform.ecms.version>4.5.x-SNAPSHOT</org.exoplatform.ecms.version>
-    <org.exoplatform.social.version>4.5.x-SNAPSHOT</org.exoplatform.social.version>
-    <org.exoplatform.forum.version>4.5.x-SNAPSHOT</org.exoplatform.forum.version>
-    <org.exoplatform.wiki.version>4.5.x-SNAPSHOT</org.exoplatform.wiki.version>
-    <org.exoplatform.calendar.version>4.5.x-SNAPSHOT</org.exoplatform.calendar.version>
-    <!-- Platform Project 3rd party Dependencies -->
-    <org.exoplatform.doc.doc-style.version>4.4.x-SNAPSHOT</org.exoplatform.doc.doc-style.version>
-    <org.powermock.version>1.6.5</org.powermock.version>
     <!-- For surefire and failsafe to be compatible with jacoco -->
     <argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
   </properties>
@@ -179,54 +175,54 @@
       </dependency>
       <!-- To be replaced by an import of GateIn Portal parent POM -->
       <dependency>
-        <groupId>org.gatein.portal</groupId>
+        <groupId>org.exoplatform.gatein.portal</groupId>
         <artifactId>exo.portal.component.common</artifactId>
-        <version>${org.gatein.portal.version}</version>
+        <version>${org.exoplatform.gatein.portal.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.gatein.portal</groupId>
+        <groupId>org.exoplatform.gatein.portal</groupId>
         <artifactId>exo.portal.component.portal</artifactId>
-        <version>${org.gatein.portal.version}</version>
+        <version>${org.exoplatform.gatein.portal.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.gatein.portal</groupId>
+        <groupId>org.exoplatform.gatein.portal</groupId>
         <artifactId>exo.portal.component.resources</artifactId>
-        <version>${org.gatein.portal.version}</version>
+        <version>${org.exoplatform.gatein.portal.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.gatein.portal</groupId>
+        <groupId>org.exoplatform.gatein.portal</groupId>
         <artifactId>exo.portal.component.web.controller</artifactId>
-        <version>${org.gatein.portal.version}</version>
+        <version>${org.exoplatform.gatein.portal.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.gatein.portal</groupId>
+        <groupId>org.exoplatform.gatein.portal</groupId>
         <artifactId>exo.portal.component.web.resources</artifactId>
-        <version>${org.gatein.portal.version}</version>
+        <version>${org.exoplatform.gatein.portal.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.gatein.portal</groupId>
+        <groupId>org.exoplatform.gatein.portal</groupId>
         <artifactId>exo.portal.component.web.server</artifactId>
-        <version>${org.gatein.portal.version}</version>
+        <version>${org.exoplatform.gatein.portal.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.gatein.portal</groupId>
+        <groupId>org.exoplatform.gatein.portal</groupId>
         <artifactId>exo.portal.webui.framework</artifactId>
-        <version>${org.gatein.portal.version}</version>
+        <version>${org.exoplatform.gatein.portal.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.gatein.portal</groupId>
+        <groupId>org.exoplatform.gatein.portal</groupId>
         <artifactId>exo.portal.webui.portal</artifactId>
-        <version>${org.gatein.portal.version}</version>
+        <version>${org.exoplatform.gatein.portal.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.gatein.portal</groupId>
+        <groupId>org.exoplatform.gatein.portal</groupId>
         <artifactId>exo.portal.webui.core</artifactId>
-        <version>${org.gatein.portal.version}</version>
+        <version>${org.exoplatform.gatein.portal.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.gatein.portal</groupId>
+        <groupId>org.exoplatform.gatein.portal</groupId>
         <artifactId>exo.portal.webui.portlet</artifactId>
-        <version>${org.gatein.portal.version}</version>
+        <version>${org.exoplatform.gatein.portal.version}</version>
       </dependency>
       <!-- To be replaced by an import of GateIn Shinding parent POM -->
       <dependency>
