--- a/integ-search-service/pom.xml
+++ b/integ-search-service/pom.xml
@@ -4,14 +4,14 @@
   <parent>
     <artifactId>integ</artifactId>
     <groupId>org.exoplatform.integration</groupId>
-    <version>4.5.x-SNAPSHOT</version>
+    <version>5.0.x-SNAPSHOT</version>
   </parent>
   <artifactId>integ-search-service</artifactId>
   <packaging>jar</packaging>
   <name>eXo PLF:: Integration - Search - Service</name>
   <dependencies>
     <dependency>
-      <groupId>org.gatein.portal</groupId>
+      <groupId>org.exoplatform.gatein.portal</groupId>
       <artifactId>exo.portal.component.portal</artifactId>
     </dependency>
      <dependency>
