PLF-7244 : upgrade to Shindig 2.5.2 and do not use gatein Shindig fork anymore (#118)

--- a/integ-ecms/integ-ecms-social/pom.xml
+++ b/integ-ecms/integ-ecms-social/pom.xml
@@ -105,7 +105,7 @@
     </dependency>
     <!-- mvn dependency:analyze marks unused but build failed if remove -->
     <dependency>
-      <groupId>org.gatein.shindig</groupId>
+      <groupId>org.apache.shindig</groupId>
       <artifactId>shindig-social-api</artifactId>
     </dependency>
     <dependency>
