[exo-release](mhbensghaier) RELEASE-519: integrationprepare release 5.0.0-RC03

--- a/integ-calendar/integ-calendar-social/pom.xml
+++ b/integ-calendar/integ-calendar-social/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>integ-calendar</artifactId>
     <groupId>org.exoplatform.integration</groupId>
-    <version>5.0.x-SNAPSHOT</version>
+    <version>5.0.0-RC03</version>
   </parent>
   <artifactId>integ-calendar-social</artifactId>
   <packaging>jar</packaging>
