[exo-release](ikallala) RELEASE-692: integrationprepare release 5.1.0-RC05

--- a/integ-social/integ-social-ecms/pom.xml
+++ b/integ-social/integ-social-ecms/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>integ-social</artifactId>
     <groupId>org.exoplatform.integration</groupId>
-    <version>5.1.x-SNAPSHOT</version>
+    <version>5.1.0-RC05</version>
   </parent>
   <artifactId>integ-social-ecms</artifactId>
   <packaging>jar</packaging>
