SWF-4388 : Set test coverage ratio for each module (#183)

--- a/integ-forum/integ-forum-social/pom.xml
+++ b/integ-forum/integ-forum-social/pom.xml
@@ -10,6 +10,9 @@
   <packaging>jar</packaging>
   <name>eXo PLF:: Social - Forum Activities</name>
   <description>Forum with Social activity</description>
+  <properties>
+    <exo.test.coverage.ratio>0.35</exo.test.coverage.ratio>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>commons-lang</groupId>
