--- a/integ-ecms/integ-ecms-social/pom.xml
+++ b/integ-ecms/integ-ecms-social/pom.xml
@@ -10,6 +10,9 @@
   <packaging>jar</packaging>
   <name>eXo PLF:: Social - View Activities</name>
   <description>ECMS with Social activity</description>
+  <properties>
+    <exo.test.coverage.ratio>0.06</exo.test.coverage.ratio>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>javax.jcr</groupId>
