--- a/integ-social/integ-social-ecms/pom.xml
+++ b/integ-social/integ-social-ecms/pom.xml
@@ -10,6 +10,9 @@
   <packaging>jar</packaging>
   <name>eXo PLF:: Social - Document composer</name>
   <description>Select document to public on activity</description>
+  <properties>
+    <exo.test.coverage.ratio>0.10</exo.test.coverage.ratio>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>javax.jcr</groupId>
