--- a/integ-wiki/integ-wiki-social/pom.xml
+++ b/integ-wiki/integ-wiki-social/pom.xml
@@ -10,6 +10,9 @@
   <packaging>jar</packaging>
   <name>eXo PLF:: Social - Wiki Activities</name>
   <description>Wiki with Social activity</description>
+  <properties>
+    <exo.test.coverage.ratio>0.19</exo.test.coverage.ratio>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>commons-lang</groupId>
