--- a/pom.xml
+++ b/pom.xml
@@ -40,18 +40,18 @@
     <!-- **************************************** -->
     <!-- Project Dependencies                     -->
     <!-- **************************************** -->
-    <org.exoplatform.depmgt.version>13-SNAPSHOT</org.exoplatform.depmgt.version>
-    <org.exoplatform.kernel.version>5.0.x-SNAPSHOT</org.exoplatform.kernel.version>
-    <org.exoplatform.core.version>5.0.x-SNAPSHOT</org.exoplatform.core.version>
-    <org.exoplatform.jcr.version>5.0.x-SNAPSHOT</org.exoplatform.jcr.version>
-    <org.exoplatform.gatein.portal.version>5.0.x-SNAPSHOT</org.exoplatform.gatein.portal.version>
-    <org.exoplatform.commons.version>5.0.x-SNAPSHOT</org.exoplatform.commons.version>
-    <org.exoplatform.ecms.version>5.0.x-SNAPSHOT</org.exoplatform.ecms.version>
-    <org.exoplatform.social.version>5.0.x-SNAPSHOT</org.exoplatform.social.version>
-    <org.exoplatform.forum.version>5.0.x-SNAPSHOT</org.exoplatform.forum.version>
-    <org.exoplatform.wiki.version>5.0.x-SNAPSHOT</org.exoplatform.wiki.version>
-    <org.exoplatform.calendar.version>5.0.x-SNAPSHOT</org.exoplatform.calendar.version>
-    <org.exoplatform.doc.doc-style.version>5.0.x-SNAPSHOT</org.exoplatform.doc.doc-style.version>
+    <org.exoplatform.depmgt.version>13.4</org.exoplatform.depmgt.version>
+    <org.exoplatform.kernel.version>5.0.4</org.exoplatform.kernel.version>
+    <org.exoplatform.core.version>5.0.4</org.exoplatform.core.version>
+    <org.exoplatform.jcr.version>5.0.4</org.exoplatform.jcr.version>
+    <org.exoplatform.gatein.portal.version>5.0.4</org.exoplatform.gatein.portal.version>
+    <org.exoplatform.commons.version>5.0.4</org.exoplatform.commons.version>
+    <org.exoplatform.ecms.version>5.0.4</org.exoplatform.ecms.version>
+    <org.exoplatform.social.version>5.0.4</org.exoplatform.social.version>
+    <org.exoplatform.forum.version>5.0.4</org.exoplatform.forum.version>
+    <org.exoplatform.wiki.version>5.0.4</org.exoplatform.wiki.version>
+    <org.exoplatform.calendar.version>5.0.4</org.exoplatform.calendar.version>
+    <org.exoplatform.doc.doc-style.version>5.0.4</org.exoplatform.doc.doc-style.version>
     <!-- Platform Project 3rd party Dependencies -->
     <org.powermock.version>1.6.5</org.powermock.version>
     <!-- GateIn Project Dependencies -->
