EXOGTN-2190 add ES indexing for gatein page

--- a/integ-gatein/pom.xml
+++ b/integ-gatein/pom.xml
@@ -10,6 +10,6 @@
   <packaging>pom</packaging>
   <name>eXo PLF:: Integration - GateIn</name>
   <modules>
-    <!-- MODULES -->
+    <module>integ-gatein-commons</module>
   </modules>
 </project>
