PLF-8392 Remove Shindig dependency

--- a/integ-search-portlet/pom.xml
+++ b/integ-search-portlet/pom.xml
@@ -29,6 +29,10 @@
       <artifactId>javax.inject</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.google.inject</groupId>
+      <artifactId>guice</artifactId>
+    </dependency>
+    <dependency>
       <groupId>javax.portlet</groupId>
       <artifactId>portlet-api</artifactId>
       <scope>provided</scope>
